z-index bug navbar

--- a/css/main.css
+++ b/css/main.css
@@ -357,7 +357,8 @@ nav {
 }
 
 .lower-design-projects {
-  z-index: 0;
+  z-index: -1;
+  position: relative;
 }
 
 .navigation-white {
